--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <header>
-        <title></title>
-    </header>
+    <!DOCTYPE html>
+    <html>
+    <head>
+      <meta charset="utf-8">
+      <title>Flappy Clone</title>
+    </head>
     <body>
-        <div></div>
+      <p>Appuyer sur la barre espace pour sauter</p>
+      <div id="game"></div>
     </body>
-</html>
-
+    </html>
